src/test/deca/context/invalid/class/5_affectationFloatInt.deca
/* Description:
    Tester l'affectation d'un champs d'une classe par une variable qui n'est pas du bon type.

    Historique:
      cree le 20/01/2020
    Sortie attendue:

*/

class Test{
    int a;
}

{
	Test classe = new Test();
  classe.a = 0.1;
}
